# bitset

./: .gitignore  CMakeLists.txt  README.md
include/: bitset.h  iterator.h  storage.h  streamreader.h  traits.h
samples/: CMakeLists.txt  main.cpp  sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp
test/unit/: CMakeLists.txt  bitset.cpp  iterator.cpp  main.cpp  streamreader.cpp
